Fix variable wrapping depending on time since the tweet was posted

--- a/public/style.css
+++ b/public/style.css
@@ -86,7 +86,7 @@ a:hover {
 
 .time {
     float: right;
-    margin: 10px;
+    margin: 10px 10px 0 0;
     font-style: italic;
 }
 
